# pgxrx

./: .graphifyignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
pgxrx/: __init__.py  __main__.py  cli.py
pgxrx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pgxrx/api/: __init__.py  server.py
pgxrx/core/: __init__.py  allele_mapper.py  diplotype.py  dosing.py  engine.py  liftover.py  phenotype.py  variant.py  vcf_parser.py
pgxrx/data/: __init__.py  cpic.py  database.py  phargkb.py  pharm_var.py  rxnorm.py  update.py
pgxrx/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  pdf_report.py
pgxrx/reports/templates/: report.html
pgxrx/web/: __init__.py  app.js  index.html  styles.css
tests/: conftest.py  test_allele_mapper.py  test_api.py  test_data_layer.py  test_diplotype.py  test_dosing_engine.py  test_full_pipeline.py  test_liftover.py  test_models.py  test_phenotype_engine.py  test_reports.py  test_vcf_parser.py
tests/data/: test_cyp2c19.vcf  test_cyp2c9.vcf  test_cyp2d6.vcf  test_dpyd.vcf  test_multi.vcf
